appId: ${APP_ID}
---
- clearState
- launchApp
- assertVisible: avy-erp Starter
- assertVisible: "Let's Get Started "
- tapOn: "Let's Get Started "
- assertVisible: Sign In
